--- a/templates/lecture.html
+++ b/templates/lecture.html
@@ -40,12 +40,20 @@
                     </div>
                 </div>
 
-                <div class="p-3 pt-5">
-                    <h5> 授業詳細 </h5>
-                     <h6>評価方法：</h6>
-                     {{AssessStyle}}<br>
-                     <h6>履修条件：</h6>
-                     {{CourseCond}}<br>
+                <div class="pt-1 pb-3">
+                    <div class="card">
+                        <div class="card-header">
+                            授業詳細
+                        </div>
+                        <div class="card-body">
+                            <dl class="row">
+                                <dt class="col-12">評価方法</dt>
+                                <dd class="col-12">{{ AssessStyle }}</dd>
+                                <dt class="col-12">履修条件</dt>
+                                <dd class="col-12">{{ CourseCond }}</dd>
+                            </dl>
+                        </div>
+
                      <table class="table">
                          <thead class="thead-dark">
                              <tr>
@@ -68,6 +76,7 @@
                       ここに授業の内容とか....についての詳しい情報を...
                     -->
 
+                    </div>
                 </div>
             </div>
         </div>
