--- a/templates/lecture.html
+++ b/templates/lecture.html
@@ -13,7 +13,7 @@
 
         <div class="container">
             <div class="pt-5 pb-5">
-                <div class="p-3 pt-5">
+                <div class="pt-5 pb-2">
                     <h3> {{LectureName}} </h3>
                 </div>
 
