--- a/OCW/static/css/resultTable.css
+++ b/OCW/static/css/resultTable.css
@@ -1,6 +1,12 @@
 @media only screen and (max-width: 575px) {
     .color-sm {
-        background-color: #DDDDDD
+        background-color: #DDDDDD;
+    }
+    .padding-bottom-sm-sm {
+        padding-bottom: 5px!important;
+    }
+    .padding-top-sm-sm {
+        padding-top: 5px!important;
     }
     td {
         display: block;
