--- a/templates/lecture.html
+++ b/templates/lecture.html
@@ -11,6 +11,12 @@
 
 {% block body %}
 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
+            <div class="navbar-brand" onclick="history.back()" style="cursor: pointer;"><i class='fas fa-chevron-left'></i> 戻る</div>
+            <!-- TODO 必要ならばトグルメニューを追加 -->
+        </nav>
+
         <div class="container">
             <div class="pt-5 pb-5">
                 <div class="pt-5 pb-2">
