--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -6,6 +6,12 @@ IQ1でもわかるOCW
 
 {% block body %}
 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
+            <a class="navbar-brand" href="/">IQ1でもわかるOCW</a>
+            <!-- TODO 必要ならばトグルメニューを追加 -->
+        </nav>
+
         <div class="container">
             <div class="pt-5 pb-5">
                 <div class="p-3 pt-5">
