--- a/templates/department.html
+++ b/templates/department.html
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
             <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
             <a class="navbar-brand" href="/">IQ1でもわかるOCW</a>
             <!-- TODO 必要ならばトグルメニューを追加 -->
