--- a/templates/lecture.html
+++ b/templates/lecture.html
@@ -11,7 +11,7 @@
 
 {% block body %}
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
             <!-- navbar-dark : 文字色白 , bg-dark : 背景黒 -->
             <div class="navbar-brand" onclick="history.back()" style="cursor: pointer;"><i class='fas fa-chevron-left'></i></div>
             <!-- TODO 必要ならばトグルメニューを追加 -->
