refs #15: 検索結果のページの検索窓に値を初期セットする

--- a/templates/searchAndResult.html
+++ b/templates/searchAndResult.html
@@ -26,7 +26,7 @@
                     <form action="/result" method="GET">
                         <div class="form-group">
                             <!-- <label for="">授業名</label> -->
-                            <input type="lecture" class="form-control" name="lectureName">
+                            <input type="lecture" class="form-control" name="lectureName" value="{{ lectureName }}">
                         </div>
                         <button type="submit" class="btn btn-dark float-right">検索</button>
                     </form>
