検索ワードに関する変数'lecname'および'lectureName'をそれぞれ'keyword'および'keyWord'に変更．

--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -21,7 +21,7 @@ IQ1でもわかるOCW
                     <form action="/result" method="GET">
                         <div class="form-group">
                             <label for="">授業名</label>
-                            <input type="lecture" class="form-control" name="lectureName">
+                            <input type="lecture" class="form-control" name="keyWord">
                         </div>
                         <button type="submit" class="btn btn-dark float-right">検索</button>
                     </form>
