--- a/templates/searchAndResult.html
+++ b/templates/searchAndResult.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-{{ lectureName }} 検索結果
+{{ keyWord }} 検索結果
 {% endblock %}
 
 {% block header %}
@@ -44,7 +44,7 @@
                     <form action="/result" method="GET">
                         <div class="form-group">
                             <!-- <label for="">授業名</label> -->
-                            <input type="lecture" class="form-control" name="lectureName" value="{{ lectureName }}">
+                            <input type="lecture" class="form-control" name="keyWord" value="{{ keyWord }}">
                         </div>
                         <button type="submit" class="btn btn-dark float-right">検索</button>
                     </form>
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="pt-5 pb-5">
                 <div class="p-3 pt-5">
-                    <h2> {{lectureName}} 検索結果</h2>
+                    <h2> {{keyWord}} 検索結果</h2>
                 </div>
                 <div class="table-responsive">
                     {% include "resultTable.html" with result_head=result_head result_content=result_content %}
