トップページの'授業名で検索'を'授業名か教員名で検索'に変更．

--- a/templates/topPage.html
+++ b/templates/topPage.html
@@ -15,12 +15,12 @@ IQ1でもわかるOCW
         <div class="container">
             <div class="pt-5 pb-5">
                 <div class="p-3 pt-5">
-                    <h3>授業名で検索</h3>
+                    <h3>授業名か教員名で検索</h3>
                 </div>
                 <div class="p-3">
                     <form action="/result" method="GET">
                         <div class="form-group">
-                            <label for="">授業名</label>
+                            <label for="">授業名・教員名</label>
                             <input type="lecture" class="form-control" name="keyWord">
                         </div>
                         <button type="submit" class="btn btn-dark float-right">検索</button>
